<resources>
    <string name="app_name">Market24</string>
    <string name="open_action_bar_toggle" translatable="false">Open</string>
    <string name="close_action_bar_toggle" translatable="false">Close</string>
    <string name="open_category">Open Category!</string>
    <string name="language">Language</string>
    <string name="arabic_lang">Arabic</string>
    <string name="choose_language">Choose Language</string>
    <string name="home">Main page</string>
    <string name="vehicles">Cars</string>
    <string name="all_categories">Category</string>
    <string name="gallery">Most Requested</string>
    <string name="recommended_for_you">Recently Added</string>
    <string name="property">property</string>
    <string name="_home">Real estate</string>
    <string name="fashion">Dress</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="register_now">Sign up</string>
    <string name="register2">Register</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="favourite">Favourite</string>
    <string name="add">Add Product</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="person">Personal account</string>
    <string name="location">location</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="supplier">Supplier</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="follow">follow</string>
    <string name="fav_list_empty">Favourite list is empty</string>
    <string name="add_to_fav">Added to favourite</string>
    <string name="remove_from_fav">Removed from favourite</string>
    <string name="egypt">Egypt</string>
    <string name="select_city">select city</string>
    <string name="select_category">select category</string>
    <string name="take_photo">Add Product Photo</string>
    <string name="type_req">Type your Request</string>
    <string name="Show">Show</string>
    <string name="product_details">Product Details</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="type_price">Type Price</string>
    <string name="personal">Personal Information</string>
    <string name="upload">Upload Product</string>
    <string name="note">with a phone number and full address (street and house number) you increase your sales opportunities</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="supplier2">Industrial Supplier?</string>
    <string name="save">Save</string>
    <string name="edit_pro">Edit Profile</string>
    <string name="price">Price</string>
    <string name="notification">Notifications</string>
    <string name="more">more</string>
    <string name="request_for_product">some one request your product</string>
    <string name="product_name">product name</string>
    <string name="personal_info">Personal Information</string>
    <string name="save_changes">Save</string>
    <string name="edit_info">Edit Profile info</string>
    <string name="industrial_supplier">Industrial supplier</string>
    <string name="personal_information">Personal Information</string>
    <string name="post_code">Post Code</string>
    <string name="Other_area">Other Area</string>
    <string name="Product_area">Product Area</string>
    <string name="area">Area</string>
    <string name="type_user">Type user</string>
    <string name="normal">normal</string>
    <string name="confirm">Confirm</string>
    <string name="register">register</string>
    <string name="desc">Description Description Description Description Description DescriptionDescriptionDescriptionDescriptionDescription</string>
    <string name="name_required">Name required!</string>
    <string name="phone_required">Phone required!</string>
    <string name="address_required">Address required!</string>
    <string name="pass_required">Password required!</string>
    <string name="confirm_pass_required">Confirm password required</string>
    <string name="pass_not_matchs">Password doesn\'t match</string>
    <string name="check_pass_length">Password length at least 6 characters</string>
    <string name="max_images_uploaded">You can upload up to 5 images for one product</string>
    <string name="title_required">Title required</string>
    <string name="category_required">Category required</string>
    <string name="price_required">Price required</string>
    <string name="product_details_required">Product details required</string>
    <string name="area_required">Area required</string>
    <string name="user_type_required">User type required</string>
    <string name="log_out">Log out</string>
    <string name="logged_out">Already logged out!</string>
    <string name="all_cities">All Governorates</string>
    <string name="no_result">No result found!</string>
    <string name="user_name_required">User name required</string>
    <string name="email_not_valid">email not valid</string>
    <string name="email">email</string>
    <string name="user_not_exist">Email or Password not Correct </string>
    <string name="register_done">Registration complete</string>
    <string name="check_your_mail">Check your mail to complete your registration!</string>
    <string name="user_exist">This email address already exists</string>
    <string name="something_wrong">Something wrong</string>
    <string name="choose_cat">Choose your category</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="report">Report</string>
    <string name="request">Request</string>
    <string name="num_req">" Number Requsted"</string>
    <string name="no_ads">No such Ads</string>
    <string name="my_ads">My Announcements</string>
    <string name="profile">Profile</string>
    <string name="have_account">Have an Account? Login!</string>
    <string name="change_details">Change Details</string>
    <string name="negotiable_salary">Negotiable price?</string>
    <string name="new_">New</string>
    <string name="used">Used</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_status">Choose Status</string>
    <string name="choose_trans">Choose Transmission Type</string>
    <string name="loading">Loading...</string>
    <string name="reason1">reason1</string>
    <string name="reason2">reason2</string>
    <string name="reason3">reason3</string>
    <string name="reason4">reason4</string>
    <string name="choose_reason_for_report">Please, Choose your reason for report</string>
    <string name="enter_your_reason">Other reasons</string>
    <string name="report_done">ads reported</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="show_adds">Show ads</string>
    <string name="show_user">Show user</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="bayer_info">Buyer information</string>
    <string name="channel_name" translatable="false">App Channel</string>
    <string name="channel_description" translatable="false">This channel for notifications test</string>
    <string name="request_accepted">Request Accpeted</string>
    <string name="request_rejected">Request Rejected</string>
    <string name="you_accept_request">You accept this request</string>
    <string name="you_reject_request">You reject this request</string>
    <string name="request_waiting">Request is waiting</string>
    <string name="owner_accept_request">The owner of this ads accept our request</string>
    <string name="owner_reject_request">The owner of this ads reject your request</string>
    <string name="car_type">Vehicle Type</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="engine">Engine</string>
    <string name="color">Color</string>
    <string name="status">Status</string>
    <string name="transmission">Transmission</string>
    <string name="distance">Distance</string>
    <string name="product_uploaded">Product uploaded successfuly</string>
    <string name="error">some thing error</string>
    <string name="upload_ads">Upload Ads, Free!</string>
    <string name="permission_denied">Permission denied</string>
    <string name="paid_ads">Paid Ads</string>
    <string name="search_result">Search result</string>
    <string name="cat_items">Category items</string>
    <string name="enter_your_message">Enter your message here</string>
    <string name="sent_message">Send message</string>
    <string name="delete_ads">Delete Product</string>
    <string name="are_u_sure">Are you sure to delete this product?</string>
    <string name="delete_done">Product deleted successfuly</string>
    <string name="english">English</string>
    <string name="choose_Type_Car">Choose car type</string>
    <string name="choose_model_Car">Choose car model</string>
    <string name="other_type">Other Type</string>
    <string name="messageInfo_complete">This information is complete</string>
    <string name="messageInfo_incomplete">This information is incomplete</string>
    <string name="next">Next</string>
    <string name="choose_sub_area">Choose Area</string>
    <string name="choose_sub_category">Choose sub Categories</string>
    <string name="car_info">Car Information</string>
    <string name="year_of_create">Manufacturing year</string>
    <string name="engine_power">Power Engine (CC)</string>
    <string name="kilo_meters">Kilometers</string>
    <string name="send_message">Send Your Message</string>
    <string name="send">send</string>
    <string name="first">First Message</string>
    <string name="my_message">Messages</string>
    <string name="all_mo7afza">All Governorate</string>
    <string name="Category_Items">Category Items</string>
    <string name="choose_color">Choose color</string>
    <string name="space">Space</string>
    <string name="room_number">No.Rooms</string>
    <string name="finished">Finishing</string>
    <string name="bathroom_number">No.Bathroom</string>
    <string name="floor_number">Floor number</string>
    <string name="luxuries">Luxuries</string>
    <string name="furnished">Furniture</string>
    <string name="other">status</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="vehicle_model">Vehicle model</string>
    <string name="square_meters">Area(Square meters)</string>
    <string name="write_msg">Write...</string>
    <string name="negotiable">Negotiable price</string>
    <string name="non_negotiable">Not negotiable price</string>
    <string name="close">Close</string>
    <string name="choose_images">Choose up to 5 images</string>
    <string name="connection_error">Connection error!</string>
    <string name="ads_uploaded">Ads Uploaded</string>
    <string name="forget">Forget Password!</string>
    <string name="change">Change</string>
    <string name="call_cats">All Categories</string>
    <string name="forget_pass">Forgot password !!</string>
    <string name="desc_forget_pass">we need your registered email id to send your password reset instruction</string>
    <string name="re_set_pass">Reset password</string>
    <string name="log_in">Log In</string>
    <string name="go">Go!</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_product">New Product</string>
    <string name="sub_category">Sub Category</string>
    <string name="chat">Messages</string>
</resources>