<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

<!--
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_nav_search"
            android:title="@string/search" />
-->
        <!--<item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_message"
            android:title="@string/my_message" />-->
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/like"
            android:title="@string/favourite" />

        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/photo"
            android:title="@string/my_ads" />


        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_product"
            android:title="@string/add" />


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />

     <!--   <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_nav_help"
            android:title="@string/help" />-->
            <item
               android:id="@+id/nav_logout"
               android:icon="@drawable/ic_logout"
               android:title="@string/log_out" />
    </group>
</menu>