<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_text"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:gravity="right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/second_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bachground_white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <EditText
            android:id="@+id/user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_message_grey"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:drawablePadding="12dp"
            android:inputType="text"
            android:singleLine="true" />


        <EditText
            android:id="@+id/login_pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/passkey"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:singleLine="true" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_light_green"
            android:gravity="center"
            android:text="@string/go"
            android:textSize="@dimen/settings_header_text_size"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forget_pass"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/settings_sup_header_text_size"
            android:textColor="@color/grey"
           />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/green"
            android:layout_marginHorizontal="5dp"
            android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

