<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/change_password">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_weight="1"
        android:id="@+id/change"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@color/green"
        android:textSize="@dimen/subtitle_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_weight="1"
        android:id="@+id/pass"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/green"
        android:textSize="@dimen/subtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/change"
        app:layout_constraintStart_toStartOf="@id/change"
        />

    <LinearLayout
        android:id="@+id/second_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      >



        <EditText
            android:id="@+id/user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_message"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingLeft="3dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_key"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="3dp"
            android:paddingRight="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/confirm_pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_key"
            android:gravity="center_vertical"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:paddingLeft="3dp"
            android:paddingRight="10dp"
            android:singleLine="true" />


        <Button
            android:id="@+id/btn_save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_light_green"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>