<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bachground_white"
    android:padding="20dp"
    android:layout_marginTop="80dp"
    >
<TextView
    android:id="@+id/forget_pass_tx"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/settings_header_text_size"
    android:text="@string/forget_pass"
    android:textColor="@color/dark_green"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/desc_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/desc_forget_pass"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/forget_pass_tx"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/email"
        android:background="@drawable/border_edit"
        android:drawablePadding="12dp"
        android:hint="Nuaman@gmail.com"
        android:textColor="@color/light_green"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/desc_forget_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/send"
        android:text="@string/re_set_pass"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:background="@drawable/background_light_green"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>